# The-Daphnia-ruler

./: .gitignore  Manual.md  README.md  Scale.txt  daphnia_ruler.py  helpers.py  measurement_methods.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: codecov_workflow.yml  daphnia_ruler_noreq.yml  daphniaruler_ci.yml  publish_tetspypi.yml
src/daphruler/: __init__.py  __main__.py  daphnia_ruler.py  helpers.py  measurement_methods.py  utils.py
src/daphruler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: assert_binary_sample1.npy  assert_contour_sample1.npy  assert_gray_sample1.npy  assert_lengtheb_sample1.npy  assert_minaxis_sample1.npy  test_daphnia_ruler.py  test_helpers.py  test_measurement_methods.py  test_utils.py
tests/test_arrays/: assert_edges_sample1.npy  assert_elipse_sample1.npy  assert_img_sample1.npy  assert_majaxis_sample1.npy  assert_tail_sample1.npy  expected_scale_measurement_array.npy  scale_measurement_array.npy
tests/test_dirs/test_images/results/: measurement_results.test_images.csv
tests/test_dirs/test_images_scale_wrong/: Scale.txt
tests/test_dirs/test_images_scale_wrong/results/: measurement_results.test_images_scale_wrong.csv
tests/test_dirs/test_ruler/results/: measurement_results.test_ruler.csv  measurement_results_test_ruler.csv
tests/test_dirs/test_ruler_recursive/: Scale.txt
tests/test_dirs/test_ruler_recursive/results/: measurement_results.test_ruler_recursive.csv  measurement_results_test_ruler_recursive.csv
(+2 files in other folders)
