[metadata]
name = daphruler
version = 0.3.0
author = Nelson Stevens
author_email = nelson.stevens92@gmail.com
description = Automate collecting morphometric traits of zooplankton
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nelstevens/The-Daphnia-ruler
project_urls =
    Bug Tracker = https://github.com/nelstevens/The-Daphnia-ruler/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src